# agent-companion

./: .gitignore  .grype.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PROJECT_BRIEF.md  README.md  SECURITY.md  SESSION_CONTEXT.md  SESSION_WORKFLOW.md  SUPPORT.md  TODO.md  generate_cover.py
agents/: main.py  pyproject.toml
agents/tasks/: blog_agent.py  feature_agent.py  input_agent.py
agents/team/: AGENTS.md  state.py  team_lead.py
agents/team/blog/: AGENTS.md  state.py
agents/team/blog/image_picker/: AGENT.md  __init__.py  agent.py
agents/team/blog/publisher/: AGENT.md  __init__.py  agent.py
agents/team/blog/researcher/: AGENT.md  __init__.py  agent.py
agents/team/blog/verifier/: agent.py
agents/team/blog/writer/: AGENT.md  __init__.py  agent.py
agents/team/builder/: AGENT.md  agent.py
agents/team/deployment/: AGENT.md  agent.py
agents/team/integrator/: AGENT.md  agent.py
agents/team/planner/: AGENT.md  agent.py
agents/team/reviewer/: AGENT.md  agent.py
agents/team/scanner/: AGENT.md  agent.py
agents/team/skills/: SKILLS.md
agents/team/skills/dalle/: SKILL.md  __init__.py  dalle.py
agents/team/skills/github/: SKILL.md  __init__.py  github.py
agents/team/skills/http/: SKILL.md  __init__.py  http.py
agents/team/skills/image_gen/: __init__.py  image_gen.py
agents/team/skills/nextjs/: SKILL.md  __init__.py  nextjs.py
agents/team/skills/npm/: SKILL.md  __init__.py  npm.py
agents/team/skills/supabase/: SKILL.md  __init__.py  supabase.py
agents/team/skills/typescript/: SKILL.md  __init__.py  typescript.py
(+39 files in other folders)
