[project]
name = "agents"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "langchain-openai>=0.3.0",
    "langgraph>=1.1.6",
    "pygithub>=2.9.1",
    "python-dotenv>=1.2.2",
    "supabase>=2.28.3",
    "ddgs>=9.0.0",
    "requests>=2.31.0",
]
