[project]
name = "agents"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "langchain-openai>=1.2.1",
    "langgraph>=1.2.0",
    "pygithub>=2.9.1",
    "python-dotenv>=1.2.2",
    "supabase>=2.30.0",
    "ddgs>=9.14.2",
    "requests>=2.34.0",
]
